# blang

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  2  2q  CMakeLists.txt  README  README.md  TODO  a  pch.hh  xmake.lua
.github/workflows/: c-cpp.yaml  linux-build.yaml  windows-build.yaml
examples/: .gitignore  calc.b  curses  curses.b  duffs_device.b  hello.b  makefile  mandelbrot.b  turing.b  xmake.lua
examples/c_interop/: b.b  main.c
libb/: .gitignore  brt.b  libb.b  makefile  xmake.lua
rules/: blang-yacc.lua  blang.lua
src/: Assert.cc  Assert.hh  Blang.cc  Blang.hh  CompilerContext.cc  CompilerContext.hh  Scope.hh  Util.cc  Util.hh  blang.cc  blang.hh  main.cc  result.hh  util.cc  util.hh  yy.hh
src/ast/: ast.cc  ast.hh  ast_addrof.cc  ast_arr_index.cc  ast_assign_binop.cc  ast_binary_op.cc  ast_break.cc  ast_deref.cc  ast_elif.cc  ast_else.cc  ast_extrn.cc  ast_func_call.cc  ast_func_def.cc  ast_gvar_declare.cc  ast_if.cc  ast_if_chain.cc  ast_inc_dec.cc  ast_number.cc  ast_return.cc  ast_root_node.cc  ast_str_ref.cc  ast_unot.cc  ast_urev.cc  ast_var_assign.cc  ast_var_declare.cc  ast_var_ref.cc  ast_while.cc
src/bison/: lexer.hh  lexer.l  parser.y  parser.yy  parserold.y
src/frontend/: Driver.cc  Driver.hh  Lexer.cc  Lexer.hh  LexerException.cc  LexerException.hh  LexerState.hh  LocationException.cc  ParserException.cc  ParserException.hh  driver.hh  lexer.cc  lexer.hh  parser.yy  token.cc  token.hh
src/frontend/DiagnosticPrinter/: DiagnosticPrinter.cc  DiagnosticPrinter.hh
src/frontend/ast/: AstAddrof.cc  AstAddrof.hh  AstAssign.cc  AstAssign.hh  AstAutoVar.cc  AstAutoVar.hh  AstAutoVarList.cc  AstAutoVarList.hh  AstBinop.cc  AstBinop.hh  AstBlock.cc  AstBlock.hh  AstBreak.cc  AstBreak.hh  AstCase.cc  AstCase.hh  AstDeref.cc  AstDeref.hh  AstDerefLv.cc  AstDerefLv.hh  AstElse.cc  AstElse.hh  AstElseIf.cc  AstElseIf.hh  AstExtern.cc  AstExtern.hh  AstFuncCall.cc  AstFuncCall.hh  AstFuncDef.cc  AstFuncDef.hh  AstGlobalArray.cc  AstGlobalArray.hh  AstGlobalVar.cc  AstGlobalVar.hh  AstGoto.cc  AstGoto.hh  AstIdentifierList.cc  AstIdentifierList.hh  AstIf.cc  AstIf.hh  (+34 more)
src/frontend/exceptions/InvalidAttributeException/: InvalidAttributeException.cc  InvalidAttributeException.hh
src/lexer/: lexer.cc  lexer.hh  token.cc
src/parser/: extrn.cc  func.cc  parser.cc  parser.hh  return.cc  rvalue.cc
temp/: AstAddrof.cc  AstDerefRv.cc  AstDerefRv.hh  AstElse.hh  AstElseIf.cc  AstElseIf.hh  AstExtern.cc  AstExtern.hh  AstFuncCall.hh  AstGoto.hh  AstIfChain.cc  AstLabel.cc  AstLabel.hh  AstStringLit.hh  AstUnot.hh  AstWhile.cc  AstWhile.hh
tools/: create_ast_node.py
(+14 files in other folders)
